// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tickets reducer bulk delete 1`] = `
Immutable.Map {
  items: Immutable.List [
    Immutable.Map {
      id: 3,
      name: "Another nice ticket",
    },
  ],
}
`;

exports[`tickets reducer fetch list 1`] = `
Immutable.Map {
  items: Immutable.List [
    Immutable.Map {
      name: "A ticket",
    },
    Immutable.Map {
      name: "Another ticket",
    },
  ],
}
`;

exports[`tickets reducer fetch list 2`] = `
Immutable.Map {
  items: Immutable.List [
  ],
}
`;

exports[`tickets reducer fetch ticket 1`] = `
Immutable.Map {
  items: Immutable.List [
    Immutable.Map {
      id: 1,
      name: "A ticket",
    },
    Immutable.Map {
      id: 2,
      name: "Another ticket",
      is_unread: false,
    },
  ],
}
`;

exports[`tickets reducer fetch ticket 2`] = `
Immutable.Map {
  items: Immutable.List [
    Immutable.Map {
      id: 1,
      name: "A ticket",
    },
    Immutable.Map {
      id: 2,
      name: "Another ticket",
    },
  ],
}
`;
